--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
   
       <div class="footer-links">
         <ul>
-          <li><a href="#home">Home</a></li>5
+          <li><a href="#home">Home</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#blog">Blog</a></li>
           <li><a href="#faq">FAQ</a></li>
