--- a/SMART CHEF HTML/registeration.html
+++ b/SMART CHEF HTML/registeration.html
@@ -3,6 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Registration Form</title>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-QLYRLT49R3"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-QLYRLT49R3');
+</script>
+
+
 </head>
 <body>
 
